--- a/404.html
+++ b/404.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+permalink: /404.html
 ---
 
 <style type="text/css" media="screen">
@@ -21,4 +22,6 @@ layout: default
 
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
+
+  <a href="/">Maybe you want to go back home?</a>
 </div>
