--- a/404.html
+++ b/404.html
@@ -8,6 +8,15 @@ permalink: /404.html
     margin: 10px auto;
     max-width: 600px;
     text-align: center;
+      position: relative;
+  }
+
+  a {
+      position: absolute;
+      bottom: 80px;
+      left: 0;
+      right: 0;
+      float: left;
   }
   h1 {
     margin: 30px 0;
@@ -18,10 +27,9 @@ permalink: /404.html
 </style>
 
 <div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
-
-  <a href="/">Maybe you want to go back home?</a>
+    <img src="assets/img/404.png">
+    <a href="/">Maybe you want to go back home?</a>
+    <!--<h1>404</h1>-->
+    <!--<p><strong>Page not found :(</strong></p>-->
+    <!--<p>The requested page could not be found.</p>-->
 </div>
