--- a/404.html
+++ b/404.html
@@ -27,7 +27,7 @@ permalink: /404.html
 </style>
 
 <div class="container">
-    <img src="assets/img/404.png">
+    <img src="/assets/img/404.png">
     <a href="/">Maybe you want to go back home?</a>
     <!--<h1>404</h1>-->
     <!--<p><strong>Page not found :(</strong></p>-->
