--- a/pages/projects.html
+++ b/pages/projects.html
@@ -7,7 +7,7 @@ title: Projects
 <section id="projects">
     {% for project in site.data.projects.projects %}
     <div class="project">
-        <div class="panel card">
+        <div class="panel">
             <div class="panel-heading">
                 <h3 class="panel-title">
                     {{ project.name }}
