Pentatonic editor (drawing tested with typescript, tsconfig, webpack, package.json)

--- a/pages/pentatonic.html
+++ b/pages/pentatonic.html
@@ -3,15 +3,19 @@ permalink: /pentatonic/
 layout: page
 title: Pentatonic editor
 ---
+<script src="../scripts/dist/bundle.js"></script>
 
-<section id="penta">
+
+<div id="DrawingBoard" style="padding-top:25px;text-align:center" class="three-columns">
     <div class="panel-left" id="penta-text">
-
+        <input type="text" value="toto" title="penta"/>
+        <br/>
+        <input type="button" value="do" onClick=""/>
     </div>
     <div class="panel-right" id="penta-json">
-
+        tata
     </div>
-    <iframe id="penta-representation">
+    <canvas id="penta-representation">
 
-    </iframe>
-</section>
+    </canvas>
+</div>
