--- a/pages/pentatonic.html
+++ b/pages/pentatonic.html
@@ -8,6 +8,8 @@ title: Pentatonic editor
 
 <div id="DrawingBoard" style="padding-top:25px;text-align:center" class="three-columns">
     <div class="panel-left" id="penta-text">
+        <label for="title-input">Title</label><input type="text" value="Title" id="title-input">
+        <label for="difficulty-input">Difficulty</label><input type="number" value="1" id="difficulty-input">
         <textarea type="text" title="penta" id="text-penta" rows="18" cols="40">MonsieurO
 3 3
 aab
@@ -18,7 +20,8 @@ a,1,2
 a,2,2
 -1,2,1,1</textarea>
         <br/>
-        <input type="button" id="btn-convert" value="Convert"/>
+        <input type="button" id="btn-visualise" value="Visualise only"/>
+        <input type="button" id="btn-convert" value="Convert to JSON">
     </div>
     <div class="panel-right">
         <div id="errors">
