Convert to JSON Presentation

--- a/pages/pentatonic.html
+++ b/pages/pentatonic.html
@@ -8,7 +8,7 @@ title: Pentatonic editor
 
 <div id="DrawingBoard" style="padding-top:25px;text-align:center" class="three-columns">
     <div class="panel-left" id="penta-text">
-        <label for="title-input">Title</label><input type="text" value="Title" id="title-input">
+        <label for="title-input">Title</label><input type="text" value="Title" id="title-input"><br/>
         <label for="difficulty-input">Difficulty</label><input type="number" value="1" id="difficulty-input">
         <textarea type="text" title="penta" id="text-penta" rows="18" cols="40">MonsieurO
 3 3
