Adapt to mobile

--- a/pages/pentatonic.html
+++ b/pages/pentatonic.html
@@ -6,7 +6,7 @@ title: Pentatonic editor
 <script src="../scripts/dist/bundle.js"></script>
 
 
-<div id="DrawingBoard" style="padding-top:25px;text-align:center" class="container">
+<div id="DrawingBoard" style="padding-top:25px;text-align:center" class="row">
     <div class="col-12 col-md-6" id="penta-text">
         <input type="button" id="btn-visualise" value="Visualise only"/>
         <input type="button" id="btn-convert" value="Convert to JSON">
