Added midi, and score format

--- a/pages/scores/shpongle.html
+++ b/pages/scores/shpongle.html
@@ -1,7 +1,8 @@
 ---
 permalink: /scores/shpongle
 layout: score
-title: Shpongle
+title: Dr. Vinkelstein - Shpongle
+link: https://www.youtube.com/watch?v=uRiTKZfsMQQ&t=6290s
 ---
 X:1
 L:1/4
