Collection of scores (added dark night and chillout)

--- a/_scores/shpongle.html
+++ b/_scores/shpongle.html
@@ -1,7 +1,8 @@
 ---
-permalink: /scores/shpongle
+permalink: /scores/shpongle-dr-vinkelstein
 layout: score
 title: Dr. Vinkelstein - Shpongle
+description: Piano introduction of the song
 link: https://www.youtube.com/watch?v=uRiTKZfsMQQ&t=6290s
 ---
 X:1
